--- a/src/EmailList.css
+++ b/src/EmailList.css
@@ -3,6 +3,17 @@
   overflow: scroll;
 }
 
+/* Hide scrollbar for Chorme, Safari and Opera */
+.emailList::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.emailList {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .emailList__settings {
   position: sticky;
   top: 0;
@@ -26,4 +37,8 @@
   border-bottom: 1px solid whitesmoke;
 
   display: flex;
+}
+
+.emailList__List {
+  padding-bottom: 20%;
 }
